--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+      <!--   <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
             <version>3.9.2</version>
@@ -51,7 +51,7 @@
             <artifactId>stanford-corenlp</artifactId>
             <version>3.9.2</version>
             <classifier>models</classifier>
-        </dependency>
+        </dependency> -->
 
     </dependencies>
 
